clusters/talos-robbinsdale/apps/home/local-gateway/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  labels:
    # external-dns: unifi
    gateway: public
spec:
  gatewayClassName: public
  listeners:
    - name: raj-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: raj-wildcard-tls
    - name: luke-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: luke-wildcard-tls
